--- a/style.css
+++ b/style.css
@@ -1,6 +1,88 @@
-.clown{
-  height: 40px;
-  width: 40px;
-  border: 3px solid orange;
-  margin: 5px;
+body{
+  background: url("images/Carnival Theme Banner.png") no-repeat center center fixed;
+  background-size: 100%;
+  cursor: url("a bazooka crosshair.cur") 14 17, crosshair ;
 }
+
+h1{
+  font-family: 'Rye', cursive;
+  font-size: 50px;
+  text-align: center;
+  margin: 0 auto;
+  color: snow;
+  letter-spacing: 30px;
+
+}
+
+.clown{
+  height: 150px;
+  width: 120px;
+/*  border: 3px solid orange;
+*/  margin: 5px;
+  position: relative;
+}
+
+span{
+  color: orange;
+  font-size: 25px;
+  border: 6px dotted black;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  text-align: center;
+
+
+
+}
+
+#flex-container1{
+display: flex;
+flex-direction: row;
+width: 750px;
+height: 150px;
+/*border: 3px solid red;
+*/justify-content: space-around;
+margin-top: 9%;
+margin-left: 20%;
+}
+
+#flex-container2{
+display: flex;
+flex-direction: row;
+width: 750px;
+height: 150px;
+/*border: 3px solid red;
+*/justify-content: space-around;
+margin-top: 4.5%;
+margin-left: 20%;
+}
+
+#flex-container3{
+display: flex;
+flex-direction: row;
+width: 500px;
+height: 150px;
+/*border: 3px solid red;
+*/justify-content: space-around;
+margin-top: 4%;
+margin-left: 30%;
+}
+
+#target2, #target4, #target5, #target9, #target12{
+  background-image: url("images/clown1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#target1, #target6, #target8, #target13{
+  background-image: url("images/clown2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#target3, #target7, #target10, #target11{
+  background-image: url("images/clown3.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
