--- a/style.css
+++ b/style.css
@@ -1,12 +1,45 @@
 body{
   background: url("images/Carnival Theme Banner.png") no-repeat center center fixed;
   background-size: 100%;
-  cursor: url("a bazooka crosshair.cur") 14 17, crosshair ;
+  cursor: url("a bazooka crosshair.cur"), crosshair ;
+  /*min-width: 960px;*/
+
+}
+
+
+
+.clown{
+  height: 25vh;
+  width: 12vw;
+/*  border: 3px solid orange;*/
+position: relative;
+}
+
+#score{
+  color: orange;
+  font-size: 2vw;
+  border: 5px dotted black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 30px;
+  margin-right: auto;
+  text-align: center;
+
+}
+
+#clock {
+  color: orange;
+  font-size: 2vw;
+  border: 5px dotted snow;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  text-align: center;
 }
 
 h1{
   font-family: 'Rye', cursive;
-  font-size: 50px;
+  font-size: 4vw;
   text-align: center;
   margin: 0 auto;
   color: snow;
@@ -14,58 +47,40 @@ h1{
 
 }
 
-.clown{
-  height: 150px;
-  width: 120px;
-/*  border: 3px solid orange;
-*/  margin: 5px;
-  position: relative;
-}
-
-span{
-  color: orange;
-  font-size: 25px;
-  border: 6px dotted black;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  padding-left: 30px;
-  text-align: center;
-
-
-
-}
-
 #flex-container1{
-display: flex;
-flex-direction: row;
-width: 750px;
-height: 150px;
-/*border: 3px solid red;
-*/justify-content: space-around;
-margin-top: 9%;
-margin-left: 20%;
+  display: flex;
+  flex-direction: row;
+  width: 60vw;
+  height: 21vh;
+  /*border: 3px solid red;*/
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 10vh;
+  margin-bottom: 2vh;
+
+
 }
 
 #flex-container2{
-display: flex;
-flex-direction: row;
-width: 750px;
-height: 150px;
-/*border: 3px solid red;
-*/justify-content: space-around;
-margin-top: 4.5%;
-margin-left: 20%;
+  display: flex;
+  flex-direction: row;
+  width: 80vw;
+  height: 21vh;
+  /*border: 3px solid red;*/
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-bottom: 6vh;
 }
 
 #flex-container3{
-display: flex;
-flex-direction: row;
-width: 500px;
-height: 150px;
-/*border: 3px solid red;
-*/justify-content: space-around;
-margin-top: 4%;
-margin-left: 30%;
+  display: flex;
+  flex-direction: row;
+  width: 37vw;
+  height: 21vh;
+  /*border: 3px solid red;*/
+  justify-content: space-around;
+  margin: 0 auto;
+
 }
 
 #target2, #target4, #target5, #target9, #target12{
