--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@media only screen and (max-width: 730px) {
+    .clown {
+        height: 10px;
+        width: 10px;
+    }
+
+  }
+
+
+
+
 body{
   background: url("images/Carnival Theme Banner.png") no-repeat center center fixed;
   background-size: 100%;
@@ -10,9 +21,11 @@ body{
 
 .clown{
   height: 25vh;
-  width: 12vw;
-/*  border: 3px solid orange;*/
-position: relative;
+  width: 15vw;
+  /*border: 3px solid orange;*/
+  position: relative;
+  max-height: 23vh;
+  max-width:11vw;
 }
 
 #score{
@@ -55,8 +68,9 @@ h1{
   /*border: 3px solid red;*/
   justify-content: space-around;
   margin: 0 auto;
-  margin-top: 10vh;
+  margin-top: 9vh;
   margin-bottom: 2vh;
+
 
 
 }
@@ -75,7 +89,7 @@ h1{
 #flex-container3{
   display: flex;
   flex-direction: row;
-  width: 37vw;
+  width: 39vw;
   height: 21vh;
   /*border: 3px solid red;*/
   justify-content: space-around;
@@ -100,4 +114,6 @@ h1{
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+
 
