stop changing things skylar and maybe you wouldnt have to fix them

--- a/landingstyle.css
+++ b/landingstyle.css
@@ -40,11 +40,14 @@ div{
   margin: 0 auto;
   width: 60vw;
   height: 21vh;
-  margin-top: 50vh;
+  margin-top: 30vh;
   margin-bottom: 2vh;
   text-align: center;
 }
 
 h1{
   font-family: 'Rye', cursive;
+  font-size: 11vh;
 }
+
+
