--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-@media only screen and (max-width: 730px) {
-    .clown {
-        height: 10px;
-        width: 10px;
-    }
-
-  }
-
-
-
-
 body{
   background: url("images/Carnival Theme Banner.png") no-repeat center center fixed;
   background-size: 100%;
@@ -22,10 +11,11 @@ body{
 .clown{
   height: 25vh;
   width: 15vw;
-  /*border: 3px solid orange;*/
-  position: relative;
+/*  border: 3px solid orange;
+*/  position: relative;
   max-height: 23vh;
   max-width:11vw;
+  padding-top: 1vh;
 }
 
 #score{
@@ -78,7 +68,7 @@ h1{
 #flex-container2{
   display: flex;
   flex-direction: row;
-  width: 80vw;
+  width: 83vw;
   height: 21vh;
   /*border: 3px solid red;*/
   justify-content: space-around;
