--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+a{
+  color: black;
+  background-color: rgba(255,255,255,.3);
+  text-decoration: none;
+  border: 4px dotted orange;
+  padding: 5px;
+  font-size: 3vh;
+  float: right;
+  clear: all;
+  font-family: 'Rye', cursive;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 body{
   background: url("images/Carnival Theme Banner.png") no-repeat center center fixed;
   background-size: 100%;
